# comic_ai_studio

./: .gitignore  Dockerfile  README.md  character_dialog_extractor.py  dialog_web.py  docker-compose.yml  example_usage.py  panel_extractor.py  panel_web.py  pyproject.toml  test_installation.py
